Stopgap Commit

--- a/src/instruments/src/MCDU/Components/styles.scss
+++ b/src/instruments/src/MCDU/Components/styles.scss
@@ -7,38 +7,65 @@
   font-style: normal;
 }
 
+@font-face {
+  src: url("/Fonts/HoneywellMCDU.ttf") format("truetype");
+  font-family: "HoneywellMCDU";
+  font-style: normal;
+  font-weight: 900;
+}
+
+@font-face {
+  src: url("/Fonts/HoneywellMCDUSmall.ttf") format("truetype");
+  font-family: "HoneywellMCDUSmall";
+  font-style: normal;
+  font-weight: 900;
+}
+
 // COLUMNS
 .column-holder {
-  flex-grow: 1;
+  flex: 1 1 auto;
   display:flex;
   flex-direction: column;
   align-items: stretch;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 //LINES
 .line-holder {
   max-height: 126px;
   min-height: 126px;
+
+  flex: 1 1 auto;
 }
 
 .line {
   max-height: 63px;
   min-height: 63px;
+  white-space: pre;
 }
 
 .line-left {
   text-align: left;
+  left: 4.5%;
+  width: 100%;
 }
 
 .line-right {
   text-align: right;
+  right: 5.0%;
+  width: 100%;
+}
+
+.line-center {
+  left: 0;
+  width: 100%;
+  text-align: center;
 }
 
 // TEXT
 .s-text {
   font-size: 4.2vw;
-  letter-spacing: 0.6vw;
+  //letter-spacing: 0.6vw;
   line-height: 5.8vw;
 }
 
